--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dream/blindress2",
+    "name": "dream/blindress",
     "license": "proprietary",
     "type": "project",
     "autoload": {
