--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <uses-feature android:name="android.hardware.camera"
                   android:required="true" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -23,13 +24,15 @@
                 android:resource="@xml/file_paths"/>
         </provider>
 
-        <activity android:name=".activities.InstructionsActivity">
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!--<activity android:name=".activities.InstructionsActivity"/>-->
+        <activity android:name=".activities.InstructionsActivity"/>
+        <activity android:name=".assets.MediaRecorderPermissionActivity"/>
+        <activity android:name=".activities.AnalyzeActivity"/>
     </application>
 </manifest>
