repeating speech on shake event on introduction screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.9'
 
     compile group: 'com.google.dagger', name: 'dagger', version: '2.10'
+
+    compile 'com.squareup:seismic:1.0.2'
 }
 repositories {
     mavenCentral()
